--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = py{36,37}
 [testenv]
 commands=
     pytest --durations=5 --cov=libertem_holo --cov-report=term --cov-report=html --cov-report=xml {posargs:tests/}
-    pytest --doctest-modules src/libertem_holo/
+    # pytest --doctest-modules src/libertem_holo/
 deps=
     -rtest_requirements.txt
 setenv=
