--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [tox]
-envlist = py{36,37}
+envlist = py{37,38,39,310,311}
 
 [testenv]
 commands=
-    pytest --durations=5 --cov=libertem_holo --cov-report=term --cov-report=html --cov-report=xml {posargs:tests/}
+    pytest --durations=5 --cov=libertem_holo --cov-report=term --cov-report=html --cov-report=xml --cov-config=setup.cfg {posargs:tests/}
     # pytest --doctest-modules src/libertem_holo/
 deps=
     -rtest_requirements.txt
@@ -15,40 +15,16 @@ setenv=
 
 [testenv:numba_coverage]
 commands=
-    pytest --durations=5 --cov=libertem_holo --cov-report=term --cov-report=html --cov-report=xml -m with_numba {posargs:tests/}
+    pytest --durations=5 --cov=libertem_holo --cov-report=term --cov-report=html --cov-report=xml --cov-config=setup.cfg -m with_numba {posargs:tests/}
 setenv=
     NUMBA_DISABLE_JIT=1
-
-[testenv:flake8]
-changedir={toxinidir}
-deps=
-    flake8
-commands=
-    flake8 --config=setup.cfg src/
-skipsdist=True
-skip_install=True
 
 [testenv:mypy]
 changedir={toxinidir}
 deps =
   mypy
 commands =
-  mypy src/libertem
-skip_install=True
-
-# general QA stuff here, we don't want to fail the flake8 build for unrelated reasons
-[testenv:qa]
-changedir={toxinidir}
-deps=
-    pyroma
-    pygments
-    twine
-commands=
-    python setup.py sdist
-    python setup.py bdist_wheel
-    twine check dist/*
-    pyroma -n 10 {toxinidir} {posargs}
-skipsdist=True
+  mypy src/libertem_holo
 skip_install=True
 
 [testenv:docs]
@@ -59,40 +35,27 @@ whitelist_externals=
 setenv=
     PYTHONPATH={toxinidir}
 commands=
-    python "{toxinidir}/scripts/build-authors-contributors"
     sphinx-autobuild -b html "{toxinidir}/docs/source" "{toxinidir}/docs/build/html" --port 8008 {posargs}
 deps=
-    sphinx>1.4
-    sphinx-autobuild
-    sphinxcontrib-bibtex
-    sphinx-issues
-    nbsphinx
-    nbsphinx_link
-    ipython
+    -rdocs_requirements.txt
 skipsdist=True
 
-[testenv:docs-deploy]
+# just a non-watching version of the docs environment above, also building twice for bibs
+[testenv:docs-build-ci]
 changedir={toxinidir}
 basepython=python3
 setenv=
     PYTHONPATH={toxinidir}
 commands=
-    python "{toxinidir}/scripts/build-authors-contributors"
-    travis-sphinx build
-    travis-sphinx deploy
+    # Two runs to get complete bibliography. The first one will throw warnings about missing
+    # citations.
+    sphinx-build -j auto -b html "{toxinidir}/docs/source" "{toxinidir}/docs/build/html"
+    sphinx-build -j auto -W -b html "{toxinidir}/docs/source" "{toxinidir}/docs/build/html"
 deps=
-    sphinx
-    travis-sphinx
-    sphinxcontrib-bibtex
-    sphinx-issues
-    nbsphinx
-    nbsphinx_link
-    ipython
+    -rdocs_requirements.txt
 skipsdist=True
 passenv=
     HOME
-    GH_*
-    TRAVIS_*
 
 [testenv:docs-check]
 changedir={toxinidir}
@@ -100,18 +63,12 @@ basepython=python3
 setenv=
     PYTHONPATH={toxinidir}
 commands=
-    python "{toxinidir}/scripts/build-authors-contributors"
     sphinx-build -W -b html "{toxinidir}/docs/source" "{toxinidir}/docs/build/html"
     sphinx-build -b doctest "{toxinidir}/docs/source" "{toxinidir}/docs/build/html"
     # sphinx-build -b linkcheck "{toxinidir}/docs/source" "{toxinidir}/docs/build/html"
     # cat docs/build/html/output.txt
 deps=
-    sphinx
-    sphinxcontrib-bibtex
-    sphinx-issues
-    nbsphinx
-    nbsphinx_link
-    ipython
+    -rdocs_requirements.txt
 skipsdist=True
 whitelist_externals=
     cat
