Update docs build and CI
- disable numba_coverage job for now
- RTD theme + our overrides
- Centralized acknowledgements
- Logo/favicon etc.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
     additional:
         strategy:
             matrix:
-                envs: ["numba_coverage", "docs-check"]
+                envs: ["docs-check"]  # add "numba_coverage" once there are tests marked with that
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
