Core reconstruction changes by @patrickadrian7
- Add different aperture filtering options
- Add phase ramp compensation helper
- Simplify line filter
- Add double resolution reconstruction mode
- Add phase shifting stack reconstruction
- Plotting helper function

Co-authored-by: patrickadrian7 <patrickadrian7@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ classifiers = [
 authors = [
     { name = "Alexander Clausen", email = "a.clausen@fz-juelich.de" },
     { name = "Dieter Weber", email = "d.weber@fz-juelich.de" },
+    { name = "Patrick Adrian", email = "patrick.adrian.gunawan@stud.th-luebeck.de" },
 ]
 
 [project.urls]
