Formatting, docstrings, type annotations, ...

--- a/tox.ini
+++ b/tox.ini
@@ -4,9 +4,16 @@ envlist = py{39,310,311,312}
 [testenv]
 commands=
     pytest --durations=5 --cov=libertem_holo --cov-report=term --cov-report=html --cov-report=xml --cov-config=setup.cfg {posargs:tests/}
-    # pytest --doctest-modules src/libertem_holo/
+    pytest --doctest-modules src/libertem_holo/
 deps=
     -rtest_requirements.txt
+    # because tox first installs the dependencies listed here, without taking
+    # our package dependencies into account, we need to repeat the numba
+    # version constraints here:
+    py{39}: numba>=0.53
+    py{310}: numba>=0.55
+    py{311}: numba>=0.57
+    py{312}: numba>=0.59
 setenv=
     # Using pytest in combination with tox on files that are part of the installed package
     # leads to collisions between the local source tree and the installed package when running tests.
@@ -29,7 +36,6 @@ skip_install=True
 
 [testenv:docs]
 changedir={toxinidir}
-basepython=python3
 whitelist_externals=
     make
 setenv=
@@ -38,12 +44,15 @@ commands=
     sphinx-autobuild -b html "{toxinidir}/docs/source" "{toxinidir}/docs/build/html" --port 8008 {posargs}
 deps=
     -rdocs_requirements.txt
+    # because tox first installs the dependencies listed here, without taking
+    # our package dependencies into account, we need to repeat the numba
+    # version constraints here:
+    numba>=0.59
 skipsdist=True
 
 # just a non-watching version of the docs environment above, also building twice for bibs
 [testenv:docs-build-ci]
 changedir={toxinidir}
-basepython=python3
 setenv=
     PYTHONPATH={toxinidir}
 commands=
@@ -59,7 +68,6 @@ passenv=
 
 [testenv:docs-check]
 changedir={toxinidir}
-basepython=python3
 setenv=
     PYTHONPATH={toxinidir}
 commands=
@@ -69,6 +77,10 @@ commands=
     # cat docs/build/html/output.txt
 deps=
     -rdocs_requirements.txt
+    # because tox first installs the dependencies listed here, without taking
+    # our package dependencies into account, we need to repeat the numba
+    # version constraints here:
+    numba>=0.59
 skipsdist=True
 whitelist_externals=
     cat
