--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,17 @@ license-files = { paths = ["LICENSE"] }
 dependencies = [
     "libertem",
     "numpy",
+    # Minimum constraints of numba for all Python versions we support
+    # See https://numba.readthedocs.io/en/stable/release-notes-overview.html
+    "numba>=0.53;python_version < '3.10'",
+    "numba>=0.55;python_version < '3.11'",
+    "numba>=0.57;python_version < '3.12'",
+    "numba>=0.59;python_version < '3.13'",
+    "numba>=0.61;python_version < '3.14' and python_version >= '3.10'",
+    # for any future Python release, constrain numba to a recent version,
+    # otherwise, version resolution might try to install an ancient version
+    # that isn't constrained properly:
+    "numba>=0.61;python_version >= '3.14'",  
     "scipy",
     "sparse",
     'scikit-image',
