Test on Python 3.13

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{39,310,311,312}
+envlist = py{39,310,311,312,313}
 
 [testenv]
 commands=
@@ -14,6 +14,7 @@ deps=
     py{310}: numba>=0.55
     py{311}: numba>=0.57
     py{312}: numba>=0.59
+    py{313}: numba>=0.61
 setenv=
     # Using pytest in combination with tox on files that are part of the installed package
     # leads to collisions between the local source tree and the installed package when running tests.
