Updated stack reconstruction notebook

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,6 +10,7 @@ repos:
     files: ^src/
   - id: check-yaml
   - id: check-added-large-files
+    exclude: ^notebooks/
 - repo: https://github.com/pycqa/flake8
   rev: 7.2.0
   hooks:
