--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,115 +1,112 @@
 name: CI
 
 on:
-    push:
-        branches:
-            - master
-            - 'v[0-9]*'
-        tags:
-            - 'v[0-9]*'
-    pull_request:
+  push:
+    branches:
+      - master
+      - 'v[0-9]*'
+    tags:
+      - 'v[0-9]*'
+  pull_request:
 
-concurrency: 
+concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 
 jobs:
-    tests:
-        strategy:
-            matrix:
-                python_version: ["3.9", "3.10", "3.11", "3.12"]
-                os: [ubuntu-latest, windows-latest, macos-14]
-                exclude:
-                  - os: macos-14
-                    python_version: "3.9"
-        runs-on: ${{ matrix.os }}
-        steps:
-            - uses: actions/checkout@v4
-            - name: Choose Python version ${{ matrix.python_version }}
-              uses: actions/setup-python@v5
-              with:
-                python-version: '${{ matrix.python_version }}'
-                cache: 'pip'
-            - name: install tox
-              run: python3 -m pip install tox tox-uv
-            - name: run tox
-              run: tox -e 'py${{ matrix.python_version }}'
-            - name: submit code coverage
-              uses: codecov/codecov-action@v4
-              env:
-                CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+  tests:
+    strategy:
+      matrix:
+        python_version: ["3.9", "3.10", "3.11", "3.12"]
+        os: [ubuntu-latest, windows-latest, macos-14]
+        exclude:
+          - os: macos-14
+            python_version: "3.9"
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Choose Python version ${{ matrix.python_version }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: '${{ matrix.python_version }}'
+          cache: 'pip'
+      - name: install tox (with uv)
+        run: python3 -m pip install tox tox-uv
+      - name: run tox
+        run: tox -e 'py${{ matrix.python_version }}'
+      - name: submit code coverage
+        uses: codecov/codecov-action@v5
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
-    additional:
-        strategy:
-            matrix:
-                envs: ["docs-check", "numba_coverage"]
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v4
-            - name: 'Choose Python version 3.11'
-              uses: actions/setup-python@v5
-              with:
-                python-version: '3.11'
-                cache: 'pip'
-            - run: sudo apt-get install -y pandoc
-            - name: install tox
-              run: python3 -m pip install tox
-            - name: 'run tox for environment ${{ matrix.envs }}'
-              run: tox -e '${{ matrix.envs }}'
-            - name: submit code coverage
-              uses: codecov/codecov-action@v4
-              env:
-                CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+  additional:
+    strategy:
+      matrix:
+        envs: ["numba_coverage", "docs-check"]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: 'Choose Python version 3.11'
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+          cache: 'pip'
+      - run: sudo apt-get install -y pandoc
+      - name: install tox
+        run: python3 -m pip install tox tox-uv
+      - name: 'run tox for environment ${{ matrix.envs }}'
+        run: tox -e '${{ matrix.envs }}'
+      - name: submit code coverage
+        uses: codecov/codecov-action@v5
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
-    build-docs:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v4
-            - name: 'Choose Python version 3.11'
-              uses: actions/setup-python@v5
-              with:
-                python-version: '3.11'
-                cache: 'pip'
-            - run: sudo apt-get install -y pandoc
-            - name: install tox
-              run: python3 -m pip install tox
-            - name: 'run tox for docs-build-ci'
-              run: tox -e 'docs-build-ci'
-            - uses: actions/upload-pages-artifact@v3.0.1
-              with:
-                path: 'docs/build/html/'
+  build-docs:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: 'Choose Python version 3.11'
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+          cache: 'pip'
+      - run: sudo apt-get install -y pandoc
+      - name: install tox
+        run: python3 -m pip install tox tox-uv
+      - name: 'run tox for docs-build-ci'
+        run: tox -e 'docs-build-ci'
+      - uses: actions/upload-pages-artifact@v3.0.1
+        with:
+          path: 'docs/build/html/'
 
-    deploy-docs:
-        runs-on: ubuntu-latest
-        needs: [build-docs, additional, tests]
-        if: github.ref  == 'refs/heads/master'
-        permissions:
-          pages: write
-          id-token: write
-        environment:
-          name: github-pages
-          url: ${{ steps.deployment.outputs.page_url }}
-        steps:
-          - name: Deploy to GitHub Pages
-            id: deployment
-            uses: actions/deploy-pages@v4
-          - run: |
-              curl -XPOST -u "sk1p:${{secrets.PAGES_TRIGGER_GH_TOKEN}}" -H "Accept: application/vnd.github.everest-preview+json" -H 'Content-Type: application/json' https://api.github.com/repos/LiberTEM/libertem.github.io/dispatches --data '{"event_type":"build_pages","client_payload":{"from":"LiberTEM-holo"}}'
+  deploy-docs:
+    runs-on: ubuntu-latest
+    needs: [build-docs, additional, tests]
+    if: github.ref  == 'refs/heads/master'
+    permissions:
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
+      - run: |
+          curl -XPOST -u "sk1p:${{secrets.PAGES_TRIGGER_GH_TOKEN}}" -H "Accept: application/vnd.github.everest-preview+json" -H 'Content-Type: application/json' https://api.github.com/repos/LiberTEM/libertem.github.io/dispatches --data '{"event_type":"build_pages","client_payload":{"from":"LiberTEM-holo"}}'
 
-    release:
-      runs-on: ubuntu-latest
-      needs: [tests, additional]
-      # master branch, stable branches or release tags:
-      if: startsWith(github.ref, 'refs/tags/v') || startsWith(github.ref, 'refs/heads/v') || github.ref == 'refs/heads/master'
-      env:
-        LT_RELEASE_UPLOAD_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        LT_RELEASE_UPLOAD_PYPI_TEST_PASSWORD: ${{ secrets.LT_RELEASE_UPLOAD_PYPI_TEST_PASSWORD }}
-        LT_RELEASE_UPLOAD_PYPI_PASSWORD: ${{ secrets.LT_RELEASE_UPLOAD_PYPI_PASSWORD }}
-        LT_RELEASE_UPLOAD_ZENODO_SANDBOX_TOKEN: ${{ secrets.LT_RELEASE_UPLOAD_ZENODO_SANDBOX_TOKEN }}
-        LT_RELEASE_UPLOAD_ZENODO_TOKEN: ${{ secrets.LT_RELEASE_UPLOAD_ZENODO_TOKEN }}
-        LT_RELEASE_UPLOAD_ZENODO_SANDBOX_PARENT: ${{ secrets.LT_RELEASE_UPLOAD_ZENODO_SANDBOX_PARENT }}
-        LT_RELEASE_UPLOAD_ZENODO_PARENT: ${{ secrets.LT_RELEASE_UPLOAD_ZENODO_PARENT }}
-      steps:
+  release:
+    runs-on: ubuntu-latest
+    needs: [build-docs, additional, tests]
+    # master branch, stable branches or release tags:
+    if: startsWith(github.ref, 'refs/tags/v') || startsWith(github.ref, 'refs/heads/v') || github.ref == 'refs/heads/master'
+    env:
+      LT_RELEASE_UPLOAD_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      LT_RELEASE_UPLOAD_PYPI_PASSWORD: ${{ secrets.LT_RELEASE_UPLOAD_PYPI_PASSWORD }}
+      LT_RELEASE_UPLOAD_ZENODO_TOKEN: ${{ secrets.LT_RELEASE_UPLOAD_ZENODO_TOKEN }}
+      LT_RELEASE_UPLOAD_ZENODO_PARENT: ${{ secrets.LT_RELEASE_UPLOAD_ZENODO_PARENT }}
+    steps:
       - uses: actions/checkout@v4
       - name: Choose Python version 3.11
         uses: actions/setup-python@v5
@@ -121,4 +118,4 @@ jobs:
       - name: release status
         run: ./scripts/release status
       - name: run release script
-        run: ./scripts/release --verbose upload --no-dry-run --pypi-user __token__ --pypi-test-user __token__
+        run: ./scripts/release --verbose upload --no-dry-run --pypi-user __token__
