--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,10 +18,11 @@ dependencies = [
     "numba>=0.57;python_version < '3.12'",
     "numba>=0.59;python_version < '3.13'",
     "numba>=0.61;python_version < '3.14' and python_version >= '3.10'",
+    "numba>=0.63;python_version < '3.15' and python_version >= '3.14'",
     # for any future Python release, constrain numba to a recent version,
     # otherwise, version resolution might try to install an ancient version
     # that isn't constrained properly:
-    "numba>=0.61;python_version >= '3.14'",  
+    "numba>=0.61;python_version >= '3.15'",  
     "scipy",
     "sparse",
     "sparseconverter",
@@ -36,6 +37,7 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
     "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
     "Operating System :: POSIX :: Linux",
     "Operating System :: MacOS :: MacOS X",
