--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,14 +6,14 @@ build-backend = "hatchling.build"
 name = "libertem-holo"
 dynamic = ["version", "readme"]
 description = "Electron holography reconstruction using LiberTEM"
-requires-python = ">=3.9"
-license-files = { paths = ["LICENSE"] }
+requires-python = ">=3.10"
+license = "GPL-3.0-or-later"
+license-files = ["LICENSE"]
 dependencies = [
     "libertem",
     "numpy",
     # Minimum constraints of numba for all Python versions we support
     # See https://numba.readthedocs.io/en/stable/release-notes-overview.html
-    "numba>=0.53;python_version < '3.10'",
     "numba>=0.55;python_version < '3.11'",
     "numba>=0.57;python_version < '3.12'",
     "numba>=0.59;python_version < '3.13'",
@@ -32,13 +32,11 @@ dependencies = [
 keywords = ["electron microscopy", "holography", "off-axis holography"]
 classifiers = [
     "Development Status :: 4 - Beta",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
     "Programming Language :: Python :: 3.14",
-    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
     "Operating System :: POSIX :: Linux",
     "Operating System :: MacOS :: MacOS X",
     "Operating System :: Microsoft :: Windows",
